# rtype-multi

./: CMakeLists.txt  README.md  justfile
include/Engine/: Engine.hpp
include/Engine/Components/: Health.hpp  IComponent.hpp  Position.hpp
include/Engine/Entities/: Entity.hpp  EntityFactory.hpp
include/Engine/Systems/: AISystem.hpp  InputSystem.hpp
include/Error/: Error.hpp
include/Graph/: AudioFactory.hpp  Button.hpp  Game.hpp  GameObject.hpp  ObjectManager.hpp  ObjectPool.hpp
scripts/linux/: build.sh  install.sh
scripts/macos/: install.sh
scripts/windows/: install.bat
src/Engine/: EntityConfig.json
src/Engine/Systems/: PowerupSystem.cpp
src/Error/: Error.cpp
src/Graph/: AssetsConfig.json  AudioManager.cpp  CMakeLists.txt  Game.cpp  GameConfig.json  ObjectManager.cpp
src/JsonParser/: JsonParser.cpp
src/Server/: lobby.cpp  main.cpp  server.cpp
tests/: Client.cpp  Doxyfile  LICENSE
tests/include/Client/: Client.hpp  ClientConnection.hpp
tests/include/Engine/: EcsGameType.hpp
tests/include/Engine/Components/: Collider.hpp  Input.hpp  TypeEntity.hpp
tests/include/Engine/Systems/: PowerupSystem.hpp
tests/include/Graph/: AudioManager.hpp  IScene.hpp  InputButton.hpp
tests/include/JsonParser/: JsonParser.hpp
tests/include/Server/: Lobby.hpp  Server.hpp
tests/scripts/utils/: test_coverage.sh  update_current_branches.sh
tests/scripts/windows/: build.bat
tests/src/Client/: ClientConnection.cpp  main.cpp
tests/src/CtrlC/: CMakeLists.txt  CtrlC.cpp
tests/src/Engine/: Engine.cpp  EntityConfig.json  LevelConfig.json
tests/src/Engine/Entities/: Entity.cpp  EntityFactory.cpp  EntityManager.cpp
tests/src/Engine/Systems/: AISystem.cpp  CollisionSystem.cpp  InputSystem.cpp  MvtSystem.cpp
tests/src/Error/: CMakeLists.txt
tests/src/Graph/: AudioFactory.cpp  Button.cpp  GameObject.cpp  InputButton.cpp  ObjectFactory.cpp
tests/src/JsonParser/: CMakeLists.txt
tests/src/Server/: Handle.cpp
